2003-08-14  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-document.c, cong-node.h, plugin-lists-node-element-listitem.c, plugin-website.c, xmldata.c

	Added namespace support to cong_node_is_tag, plus some other utility functions on nodes

2003-08-13  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-app.c, cong-app.h, cong-document.c, cong-document.h, cong-editor-node-comment.c, cong-editor-node-text.c, cong-location.c, cong-location.h, cong-menus.c, cong-node.h, cong-primary-window.c, cong-span-text-editor.c, cursor.c, global.h, main.c, popup.c, select.c, tree.c, xmldata.c, xmledit.c

	Big clipboard cleanup: now represented as a source string, rather than as CongNodePtr

	* cong-range.h, cong-selection.h, cong-range.c, Makefile.am

	New files:  big tidy up of CongSelection using a new CongRange type

	* cong-editor-area-flow-holder-blocks.c

	Fixed a bug in the inline-splitting code

2003-08-13  Geert Stappers <stappers@stappers.nl>

	* cong-editor-area-flow-holder-blocks.c

	Fixed a C99-ism

	* cong-editor-area-flow-holder-inlines.c

	Fixed a C99-ism

2003-08-13  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-editor-area-flow-holder-blocks.c

	Split existing inline in half when a block node is added inside it.

	* cong-editor-area-flow-holder-inlines.c

	Optimised line regeneration by amortising all ops into one when an end_edit occurs, if a regenreation is requested within a doc edit.
	
	* cong-document.h

	Fixed a missing end-of-comment
	
	* cong-document.c

	Merged some selection notifications

2003-08-12  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-document.c, cong-document.h, cong-location.c, cong-node.h, global.h, select.c, tree.c, xmldata.c

	Added debug checking, and hooks to handle cursor and selection locations when things get edited
	
2003-08-12  Jeff Martin <jeff@custommonkey.org>

	* cong-menus.c

	Fixed a C99-ism

2003-08-11  David Malcolm <david@davemalcolm.demon.co.uk>

	* popup.c
